--- a/main.css
+++ b/main.css
@@ -1023,3 +1023,231 @@ hr {
 .instruction p {
   font-size: 18px;
 }
+/* effect twelve */
+.effect_twelve{
+  width:100%;
+  margin:0;
+  padding:0;
+  height: 100vh;
+}
+.perspective {
+  width: 100%;
+  perspective: 1000px;
+}
+
+#tops {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+#card {
+  width:300px;
+  height:500px;
+  position:relative;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background-image:url("http://statsdemo.com/wp-content/uploads/2022/05/pngwing.com_.png");
+  background-size:cover;
+  background-position:center;
+  overflow:hidden;
+  margin: auto;
+  box-shadow: 0 70px 63px -60px #494848;
+  transform-style: preserve-3d;
+  transition: transform .05s linear;
+  border-radius: 20px;
+}
+#thumb{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  pointer-events:none;
+}
+#thumb:after{
+  background: inherit;
+  content: '';
+  display: block;
+  position: absolute;
+  left: -60px;
+  top: 40px;
+  width: 100%;
+  height: 108%;
+  z-index: -1;
+  filter: blur(55px);
+}
+/* 13. hamburger effect */
+/* slide section */
+.slide-section{
+  width:100%;
+  height:100vh;
+  background-color: #fff;
+}
+
+.slide-section .images-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.slide-section .images-wrapper img {
+  position: absolute;
+  /* margin-top:15rem; */
+}
+
+.slide-section .images-wrapper img:first-child{
+  top:-700px;
+  z-index: 1000;
+  margin-left:87px;
+}
+.slide-section .images-wrapper img:nth-child(2){
+  top:-505px;
+  z-index:900;
+}
+.slide-section .images-wrapper img:nth-child(3){
+  top:-467px;
+  z-index:800;
+}
+.slide-section .images-wrapper img:nth-child(4){
+  top:-392px;
+  z-index:400;
+}
+.slide-section .images-wrapper img:nth-child(5){
+  top:-257px;
+  z-index:300;
+}
+.slide-section .images-wrapper img:nth-child(6){
+  top:-180px;
+  z-index:200;
+}
+.slide-section .images-wrapper img:nth-child(7){
+  top:-47px;
+  z-index:100;
+}
+.slide-section .images-wrapper img:last-child{
+  top:50px;
+  margin-left:70px;
+}
+
+.content .text-box{
+  z-index: 222;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(20px);
+  padding: 40px;
+  max-width: 400px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  transform: translate(-80px, 50px);
+  margin-top:-85px;
+  margin-left:100px;
+}
+
+.content .text-box h3{
+  font-size: 2em;
+  margin-bottom: 10px;
+}
+
+/* ingredient section */
+.ingredient-section{
+  width:100%;
+  height: 100vh;
+}
+
+.ingredient-section h2{
+  /* color:white; */
+  font-size:3rem;
+  text-align: center;
+  letter-spacing: 15px;
+  margin-top:7rem;
+}
+
+.ingredient-wrapper{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  grid-template-columns: repeat(5, 1fr);
+  width: 100%;
+  margin-top:5rem;
+}
+
+.ingredient-wrapper img{
+  width:20vw;
+  height:40vh;
+  object-fit: cover;
+  display:block;
+}
+
+.ingredient-wrapper div p{
+  font-size:1.2rem;
+  /* color:rgb(219, 219, 219); */
+  text-align: center;
+}
+
+/* cook section */
+.cook-section {
+  background-color: #fff;
+  width:100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  position: relative;
+}
+
+.cook-section h2{
+  margin-top:5rem;
+  color:black;
+  font-size:3rem;
+  text-align: center;
+}
+
+.cook-section .images-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top:15rem;
+  width:100%;
+  height:100vh;
+}
+
+.cook-section .images-wrapper img {
+  position: absolute;
+}
+
+/* ingredient section */
+.ingredient-section{
+  width:100%;
+  height: 100vh;
+}
+
+.ingredient-section h2{
+  color:black;
+  font-size:3rem;
+  text-align: center;
+  letter-spacing: 15px;
+  margin-top:7rem;
+}
+
+.ingredient-wrapper{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  grid-template-columns: repeat(5, 1fr);
+  width: 100%;
+  margin-top:5rem;
+}
+
+.ingredient-wrapper img{
+  width:20vw;
+  height:40vh;
+  object-fit: cover;
+  display:block;
+}
+
+.ingredient-wrapper div p{
+  font-size:1.2rem;
+  text-align: center;
+}
